# interpretability-triage

./: 01_run_steerling_inference.py  02_demographic_variation.py  02b_extract_concept_weights.py  03b_analyze_concept_weights.py  04b_corrected_steering.py  04c_concept_erasure.py  05_generate_outputs.py  05_physician_evaluation.py  06_comparison_model.py  07_nlp_response_analysis.py  08_comparative_analysis.py  09_concept_safety_alignment.py  10_causal_correction.py  10_modal_run.py  10c_tp_correction_modal.py  11_tables_figures.py  12_concept_distribution_analysis.py  20_gemma_base_inference.py  21_sae_steering.py  22_logit_lens.py  23_probing_tsv.py  25_comparative_analysis.py  Dockerfile  LICENSE  Makefile  README.md  analysis_log.txt  check_status.py  config.py  expanded_parser.py  extraction_log.txt  launch_pipeline.py  llm_judge.py  llm_judge_focused.py  modal_gemma_pipeline.py  modal_pipeline.py  modal_sae_pertoken.py  modal_tsv_steering.py  modal_tsv_steering_v2.py  monitor_and_deploy.sh  (+7 more)
data/: README.md  physician_test_clean_n200.json
data/baseline_results/: physician_metrics.csv  realworld_metrics.csv
docs/: METHODS.md
output/physician_evaluation/: answer_key.json  evaluation_protocol.json  instructions.txt
src/: __init__.py  utils.py
tables/: table1_study_population.csv  table2_baseline_performance.csv  table2_triage_performance.csv  table3_concept_alignment.csv  table3_top_concepts.csv
